workspaces/diff-engine/src/learn_shape/snapshots/optic_diff_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_array_bodies__empty_array_results.snap
---
source: workspaces/diff-engine/src/learn_shape/result.rs
expression: "&empty_array_results"
---
(
    Some(
        "test-id-3",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-3",
                    base_shape_id: "$list",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-2",
                    base_shape_id: "$unknown",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-3",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-2",
                                },
                            ),
                            consuming_parameter_id: "$listItem",
                        },
                    ),
                },
            ),
        ),
    ],
    Some(
        "test-id-3",
    ),
)
