workspaces/diff-engine/src/learn_shape/snapshots/optic_diff_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_array_bodies__polymorphic_array_results.snap
---
source: workspaces/diff-engine/src/learn_shape/result.rs
expression: "&polymorphic_array_results"
---
(
    Some(
        "test-id-7",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-2",
                    base_shape_id: "$oneOf",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-5",
                    base_shape_id: "$string",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShapeParameter(
                AddShapeParameter {
                    shape_parameter_id: "test-id-3",
                    shape_id: "test-id-2",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-2",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-5",
                                },
                            ),
                            consuming_parameter_id: "test-id-3",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-6",
                    base_shape_id: "$number",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShapeParameter(
                AddShapeParameter {
                    shape_parameter_id: "test-id-4",
                    shape_id: "test-id-2",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-2",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-6",
                                },
                            ),
                            consuming_parameter_id: "test-id-4",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-7",
                    base_shape_id: "$list",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-7",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-2",
                                },
                            ),
                            consuming_parameter_id: "$listItem",
                        },
                    ),
                },
            ),
        ),
    ],
)
